# ADeus

devices/raspizerow/: CMakeLists.txt  main.cpp
docs/: sequence.md  sequence.puml
